--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-jdbc.url=jdbc:mysql://localhost:3306/java2
-driverClass=com.mysql.jdbc.Driver
-database.user.name=root
-database.user.password=
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=true
-hibernate.format_sql=true
-hibernate.hbm2ddl.auto=validate
+#jdbc.url=jdbc:mysql://localhost:3306/java2
+#driverClass=com.mysql.jdbc.Driver
+#database.user.name=root
+#database.user.password=
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.show_sql=true
+#hibernate.format_sql=true
+#hibernate.hbm2ddl.auto=validate
 hibernate.packagesToScan=lv.javaguru.java2
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.session.jdbc.initializer.enabled=true
+#jpa.database
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/java2
+spring.datasource.dbcp2.username=root
+spring.datasource.dbcp2.password=
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
