--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,18 @@
 #hibernate.show_sql=true
 #hibernate.format_sql=true
 #hibernate.hbm2ddl.auto=validate
-hibernate.packagesToScan=lv.javaguru.java2
+#hibernate.packagesToScan=lv.javaguru.java2
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.session.jdbc.initializer.enabled=true
 #jpa.database
+#spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/java2
-spring.datasource.dbcp2.username=root
-spring.datasource.dbcp2.password=
-spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/java2
+spring.datasource.username=root
+spring.datasource.password=
+#spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
